manifests/base/templify/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: templify-vue-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: templify-vue
