manifests/base/templify/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: templify-vue-ing
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "templify.211.254.213.33.sslip.io"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: templify-vue-svc
              port:
                number: 80
  tls:
  - hosts:
    - templify.211.254.213.33.sslip.io
    secretName: templify-vue-tls
